fix: update header image height for improved visibility

--- a/recipeMemberTwo/recipeStyleTwo.css
+++ b/recipeMemberTwo/recipeStyleTwo.css
@@ -70,7 +70,7 @@ h3 {
 
 #headerImage {
     background-image: url(/img/brokoli-auflauf.jpg);
-    height: 50px;
+    height: 250px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
